--- a/ammc-npa-strat-signature.html
+++ b/ammc-npa-strat-signature.html
@@ -44,7 +44,7 @@
           </td>
           <td style="width: 136px; padding: 0 32px 0 57px">
             <!-- NPA Strategies logo -->
-            <a href="https://www.natpublicaffairs.com">
+            <a href="http://npastrategies.com/">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo.png"
                 alt="National Public Affairs Strategies"
